--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ h1{
     margin-left: 40%;
     font-family: 'Georgia', serif;
 }
+h3{
+    margin: 0;
+    padding: 0;
+    font-family: 'Georgia', serif;
+}
 
 .text2, .text1{
     margin: 10px 0 10px 20px;
